# learning

./: README.md
6502/: .asm-lsp.toml  compile.sh  cu.sh  test.s  upload.sh  write.py
AdventOfCode/: README.md  new.sh
basic_autograd/: Network.py  Tensor.py  main.py  test.py
bevy_ball_game/: Cargo.toml
bevy_ball_game/src/: app_state.rs  main.rs
bevy_clicker/: Cargo.toml
bevy_clicker/src/: balls.rs  lib.rs  main.rs  player.rs  score.rs  setup.rs  shop.rs  world_to_screen.rs
bevy_clicker/src/balls/: mod.rs  movement.rs  score.rs
bevy_clicker/src/balls/properties/: base_score.rs  bounce_decaying.rs  bounce_multiply.rs  bounce_score.rs  decaying.rs  mod.rs  preferred_wall.rs
bevy_clicker/src/input/: mod.rs  mouse.rs
bevy_clicker/src/ui/: mod.rs
bevy_clicker/src/ui/components/: button.rs
bevy_clicker/src/utilities/: destroy.rs  mod.rs
bevy_snake/: Cargo.toml
bevy_snake/src/: constants.rs  direction.rs  food.rs  food_bubble.rs  game_state.rs  handle_input.rs  main.rs  snake.rs
emotional_support_bot/: .gitignore  README.md  bot.js  config-sample.js  db.js  defineSubroutines.js  loginApproval.js  package-lock.json  package.json  speechHandler.js
emotional_support_bot/brain/: begin.rive  brain.rive  commands.rive
platformer/: Cargo.toml
platformer/src/: camera.rs  follow.rs  lib.rs  main.rs  physics.rs  (+1 more)
prompting_playground/: README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  prettier.config.mjs
writing_an_interpreter_in_go/: Makefile  README.md  go.mod  main.go
writing_an_interpreter_in_rust/: Cargo.toml  Makefile
(+123 files in other folders)
