[package]
name = "bevy_clicker"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-butler = "0.6.2"
bevy-inspector-egui = "0.31.0"
haalka = "0.5.1"
rand = "0.9.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
